sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:11: error: ambiguous reference to overloaded definition,
both method | in class Int of type (x: Char)Int
and  method | in class Int of type (x: Byte)Int
match expected type ?
      if (ecart=9 | ecart=10){ecart=11}
                  ^AlgCombSort11:11: error: type mismatch;
 found   : Unit
 required: Boolean
      if (ecart=9 | ecart=10){ecart=11}
               ^